# Fermi-Trade-SDK

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: basic_trading.rs  debug_airdrop.rs  debug_order.rs  full_trading_test.rs  test_order_on_book.rs
src/: client.rs  continuum.rs  error.rs  keypair.rs  lib.rs  rpc.rs  signing.rs  types.rs
