[package]
name = "fermi-trade-sdk"
version = "0.1.0"
edition = "2021"
description = "Standalone SDK for Fermi perpetuals DEX via Continuum"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# gRPC
tonic = "0.10"
prost = "0.12"

# Crypto
ed25519-dalek = "1.0"
sha2 = "0.10"
rand = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.10"

# Encoding
bs58 = "0.5"
hex = "0.4"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tracing-subscriber = "0.3"

[[example]]
name = "basic_trading"
path = "examples/basic_trading.rs"
